[package]
name = "httq"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt"] }
axum = "0.5.11"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
paho-mqtt = { version = "0.11.1", default-features = false, features = ["bundled"] }
url = { version = "2.2.2", features = ["serde"] }
base64 = "0.13.0"