[package]
name = "httq"
version = "0.6.0"
edition = "2021"

[dependencies]
axum = "0.6.15"
base64 = "0.21.0"
futures-util = "0.3.28"
paho-mqtt = { version = "0.12.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
url = { version = "2.3.1", features = ["serde"] }
